--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ title                    : "Site Title"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Luartech.innova"
-description              : "An amazing website."
-url                      : "https://andresluarte.github.io" #" the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
+description              : "Portafolio de servicios como desarrollador de aplicaciones web"
+url: "https://andresluarte.github.io" #" the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl: ""
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
